Fixed image slider on IE8, checked out scope issues (no luck)

--- a/app/assets/stylesheets/dhaka.css.scss
+++ b/app/assets/stylesheets/dhaka.css.scss
@@ -293,6 +293,7 @@ body > footer {
     .starred a {
       text-indent: 0 !important;
       background: transparent !important;
+      margin: 0 !important;
       display: inline !important;
     }
 
